Add subdirectory option to virtual folders
Allow virtual folders to map to subdirectories within shared storage,
enabling better user isolation and multi-tenant setups.

When configuring a virtual folder, users can now specify a
'virtual_subdirectory' that automatically isolates their access within a
shared storage location. For example, multiple users can share the same
base folder while each accessing their own subdirectory.

Signed-off-by: TEC <git@tecosaur.net>

--- a/static/locales/en/translation.json
+++ b/static/locales/en/translation.json
@@ -564,6 +564,8 @@
     "virtual_folders": {
         "view_manage": "View and manage virtual folders",
         "mount_path": "mount path, i.e. /vfolder",
+        "subdirectory": "subdirectory within folder (optional)",
+        "subdirectory_help": "(optional)",
         "quota_size": "Quota size",
         "quota_size_help": "0 means no limit. You can use MB/GB/TB suffix",
         "quota_files": "Quota files",
